# keys-keeper-skill

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  keys-keeper-admin-canvas.html  pyproject.toml  ux-spec-2026-05-04-keys-keeper-admin.md
.claude-plugin/: plugin.json
.github/workflows/: tests.yml
docs/landing/: Dockerfile  RECORD.md  SHOT-LIST.md  index.html  nginx.conf  ux-spec-2026-05-04-keys-keeper-landing.md
docs/superpowers/plans/: 2026-05-04-keys-keeper-plan.md  manual-e2e-checklist.md
docs/superpowers/specs/: 2026-05-04-keys-keeper-design.md
scripts/: build-icon.py  install_skill.ps1  install_skill.sh
scripts/demo/: env.sh  setup.sh  teardown.sh
skills/keys-keeper/: SKILL.md
skills/keys-keeper/references/: examples.md
src/keys_keeper/: __main__.py  _clipboard_clear_daemon.py  _locking.py  api.py  audit.py  backend.py  backend_windows.py  cli.py  clipboard.py  composition.py  crypto.py  init_cmd.py  macos_app.py  models.py  pages.py  parser.py  paths.py  refs.py  server.py  ssh_runner.py  store.py  windows_app.py
src/keys_keeper/agent_rules/: __init__.py  canonical.py  render.py
src/keys_keeper/static/: app.css  app.js
src/keys_keeper/templates/: audit.html  base.html  bulk_paste.html  dashboard.html  entry_detail.html  new_edit.html  settings.html
tests/: conftest.py  test_app_install.py  test_audit.py  test_backend.py  test_backend_windows.py  test_cli_add.py  test_cli_copy_inject.py  test_cli_doctor.py  test_cli_edit_rm.py  test_cli_export.py  test_cli_init.py  test_cli_read.py  test_cli_ssh.py  test_crypto.py  test_models.py  test_parser.py  test_paths.py  test_refs.py  test_rule_generators.py  test_sealed.py  test_server_api.py  test_server_auth.py  test_server_pages.py  test_store.py
tests/fixtures/rules/: aider_conventions.md  claude.md  cline.md  codex_agents.md  cursor.mdc  generic.md
(+1 files in other folders)
